--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <p class="section__text__p1">Get To Know More</p>
   <h1 class="title">About Me</h1>
   <div class="section-container">
-    <div class="section__pic-container">
+    <div class="Pic-container">
       <img
               src="Project-Pics/1691899923714_1%20(1).jpg"
               alt="Profile picture"
